<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.screens.NewPropertyScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:minHeight="50dp"
                android:padding="@dimen/title_padding"
                android:text="@string/what_property_would_you_like_to_add"
                android:textAlignment="center"
                android:textColor="@color/green_primary"
                android:textSize="34sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/property_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:hint="@string/property_address"
                android:inputType="textPostalAddress"
                android:minHeight="50dp"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:id="@+id/property_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/property_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="50dp"
                    android:theme="@style/SpinnerTheme" />

                <EditText
                    android:id="@+id/rooms"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_sans"
                    android:hint="@string/rooms"
                    android:inputType="number" />
            </LinearLayout>

            <EditText
                android:id="@+id/bathrooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:hint="@string/bathrooms"
                android:inputType="number" />

            <EditText
                android:id="@+id/floors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:hint="@string/floors"
                android:inputType="number" />

            <CheckBox
                android:id="@+id/pool_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/pool" />

            <CheckBox
                android:id="@+id/gym_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/gym" />

            <CheckBox
                android:id="@+id/garden_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/garden" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/laundry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:padding="10dp"
                android:text="@string/laundry"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/parking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:hint="@string/parking"
                android:inputType="number" />

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:hint="@string/price"
                android:inputType="numberDecimal" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/offer_property_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:padding="10dp"
                android:text="@string/offer_property"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <LinearLayout
                android:id="@+id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/back_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/baloo_bhai"
                    android:minHeight="50dp"
                    android:text="@string/back"
                    android:textAllCaps="true"
                    android:textColor="@color/green_primary"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/add_property_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/baloo_bhai"
                    android:minHeight="50dp"
                    android:text="@string/add_property"
                    android:textColor="@color/green_primary"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
