<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:minHeight="50dp"
    tools:context=".ui.screens.RequestScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="48dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/back_button_margin"
                android:layout_marginTop="@dimen/back_button_margin"
                android:background="#00FFFFFF"
                android:contentDescription="@string/back"
                android:scaleType="fitXY"
                android:src="@drawable/backbutton" />

            <TextView
                android:id="@+id/request_property_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:gravity="center"
                android:paddingTop="@dimen/title_padding"
                android:text="@string/property_address"
                android:textColor="@color/green_primary"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/request_price_of_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/price"
                android:textColor="@color/colorDefaultText"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/landlord_property_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/input_box_shadow"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/request_type_of_property"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans"
                        android:paddingStart="20dp"
                        android:paddingEnd="30dp"
                        android:text="@string/type_of_property"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/request_msg_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/request_type_of_property"
                        android:layout_marginStart="54dp"
                        android:layout_marginTop="-22dp"
                        android:layout_toEndOf="@+id/request_type_of_property"
                        android:fontFamily="@font/nunito_sans"
                        android:gravity="center_horizontal"
                        android:text="@string/unable_to_get_info"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/request_amenities"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans"
                        android:paddingStart="20dp"
                        android:paddingEnd="30dp"
                        android:text="@string/amenities"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/request_msg_amenities"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/request_amenities"
                        android:fontFamily="@font/nunito_sans"
                        android:gravity="center_horizontal"
                        android:text="@string/unable_to_get_info"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/landlord_details_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/input_box_shadow"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/landlord_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/made_by_landlord"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/nunito_sans"
                        android:text="@string/made_by"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/request_landlord_name_msg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/nunito_sans"
                        android:text="@string/unable_to_get_info"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/landlord_desc_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">

                    <TextView
                        android:id="@+id/os_landlord_desc_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/nunito_sans"
                        android:text="@string/os_landlord_desc_label"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/os_landlord_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/nunito_sans"
                        android:hint="@string/unable_to_get_info"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/landlord_address_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">

                    <TextView
                        android:id="@+id/os_landlord_address_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/nunito_sans"
                        android:text="@string/os_landlord_address_label"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/os_landlord_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/nunito_sans"
                        android:text="@string/unable_to_get_info"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/landlord_rating_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/os_landlord_rating_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/nunito_sans"
                        android:gravity="center_vertical"
                        android:text="@string/os_landlord_rating_label"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RatingBar
                        android:id="@+id/os_landlord_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="true"
                        android:scaleX="0.7"
                        android:scaleY="0.7" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/special_instructions_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/input_box_shadow"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/request_special_instructions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="30dp"
                    android:text="@string/special_instructions"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/users_special_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/nunito_sans"
                    android:gravity="start|top"
                    android:hint="@string/any_special_instructions"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:paddingStart="20dp"
                    android:paddingEnd="30dp"
                    android:textColorHint="@color/green_darker"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/quantity_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/input_box_shadow"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/minus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/clear"
                    android:ems="2"
                    android:fontFamily="@font/baloo_bhai"
                    android:minWidth="48dp"
                    android:text="@string/minus"
                    android:textColor="@color/green_darker"
                    android:textColorLink="#FFFFFF"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/request_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:fontFamily="@font/nunito_sans"
                    android:gravity="center"
                    android:hint="@string/number"
                    android:inputType="number"
                    android:minWidth="48dp"
                    android:minHeight="50dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/add_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/clear"
                    android:ems="2"
                    android:fontFamily="@font/baloo_bhai"
                    android:minWidth="48dp"
                    android:text="@string/plus"
                    android:textColor="@color/green_darker"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">

                <Button
                    android:id="@+id/add_or_remove_from_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/baloo_bhai"
                    android:text="@string/add_or_remove_from_cart"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
